[tool.poetry]
name = "arxiv-owl"
version = "0.1.0"
description = "Deliver arxiv articles"
authors = ["jinshisai <jn.insa.sai@gmail.com>"]
license = "MIT License"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
beautifulsoup4 = "^4.9.3"
dataclasses = "^0.6"
slackweb = "^1.0.5"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
